--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <%-init_css('common.css,index.css')%>
 </head>
 <body>
     <h1 id="app"></h1>
