--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     <h1 id="app"></h1>
-    <script src="./js/vue.min.js"></script>
-    <script src="./js/index.js"></script>
+    <%-init_js('vue.min.js,index.js')%>
 </body>
 </html>
