--- a/debug/index.html
+++ b/debug/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-<title>Document</title>
-
+	<title>Document</title>
     <%-init_css('index.css')%>
 </head>
 <body>
     <h1 id="app"></h1>
-    <%-init_js('zepto.js,vue.min.js,index.js')%>
+    <%-init_js('index.js')%>
 </body>
 </html>
