--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    @@include("./_common/head.html")
-    <%-init_css('index.css')%>
+    include('./_common/head.html')
+    css('index.css,dd.css')
 </head>
 <body>
     <h1 id="app"></h1>
-    <%-init_js('zepto.js,vue.min.js,index.js')%>
+    js("zepto.js,vue.min.js,index.js,bbb.js")
+    include('./_common/foot.html')
 </body>
 </html>
