--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    include('./_common/head.html')
-    css('index.css,dd.css')
+    @@include('./_common/head.html')
+    @@css('index.css')
 </head>
 <body>
     <h1 id="app"></h1>
-    js("zepto.js,vue.min.js,index.js,bbb.js")
-    include('./_common/foot.html')
+    @@js("zepto.js,vue.min.js,index.js")
+    @@include('./_common/foot.html')
 </body>
 </html>
